adds service component

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CourseAdmin</title>
-  <base href="/">
+  <title>Dentiny Movers</title>
+  <base href="/">   
+  <!-- <script src="http://maps.googleapis.com/maps/api/js"></script> -->
+  <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyDsX59tC9d0SRhtYplHb3P61bxT1KLibcM"></script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
 </head>
 <body>
+  
   <app-root></app-root>
 </body>
 </html>
